--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   
 
     /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-    .row.content {height: 1080px}
+                                                                       .row.content {height: 1550px}
     
     /* Set gray background color and 100% height */
     .sidenav {
@@ -431,7 +431,15 @@ function closeForm() {
   </label><br><center>
   <button type="button" class="btn btn-success">Match</button>
 </center>
-</div>
+<br>
+
+<hr>
+
+<img src="qr-code.png" height="300" width="350">
+<hr class="hr">
+<center>
+<button type="button" class="btn btn-primary btn-xs">Download our app</button>
+</center></div>
 
 
     </div>
@@ -593,6 +601,12 @@ You can register for Free and search according to your specific criteria on age,
             </ul>
           </div>
         </div>
+
+        <ul class="pagination">
+  <li><a href="#">1</a></li>
+  <li><a href="#">2</a></li>
+ 
+</ul>
         <hr>
       </div>
       <div class="container">
