--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ function closeForm() {
 <div class="container-fluid">
   <div class="row content">
     <div class="col-sm-3 sidenav hidden-xs">
-      <h2>VIVAH  &nbsp;&nbsp;&nbsp; <img src="download.png" height="80px" width="160px"> </h2> 
+      <h2>VIVAH  &nbsp;&nbsp;&nbsp; <img src="download.png" class="img-rounded" height="80px" width="160px"> </h2> 
       <ul class="nav nav-pills nav-stacked">
 
         <li class="active"><a href="#section1">Details</a></li>
@@ -424,7 +424,7 @@ function closeForm() {
 
       
 <br><br><p>Search by area</p>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6413.19159435471!2d75.69829586565221!3d31.251353593023808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x505694a3e3500986!2sComputer%20Applications%20and%20Research%20Department%20LPU%20Block%2038!5e1!3m2!1sen!2sin!4v1599488905443!5m2!1sen!2sin" width="350" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6413.19159435471!2d75.69829586565221!3d31.251353593023808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x505694a3e3500986!2sComputer%20Applications%20and%20Research%20Department%20LPU%20Block%2038!5e1!3m2!1sen!2sin!4v1599488905443!5m2!1sen!2sin" width="350" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="img-rounded"></iframe>
  <div class="form-check" id="male">
   <label class="form-check-label">
     <input type="checkbox" class="form-check-input" value="">  Agree with terms and conditions
@@ -435,7 +435,7 @@ function closeForm() {
 
 <hr>
 
-<img src="qr-code.png" height="300" width="350">
+<img src="qr-code.png" height="300" width="350" class="img-thumbnail">
 <hr class="hr">
 <center>
 <button type="button" class="btn btn-primary btn-xs">Download our app</button>
@@ -473,19 +473,19 @@ function closeForm() {
           <div class="row">
     <div class="col-sm-3">
       <p>Amanindar age:27</p>
-      <img src="download (3).jfif" class="img-responsive" style="width:100%" alt="Image">
+      <img src="download (3).jfif" class="img-rounded" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
       <p>Balvindar age:29</p>
-      <img src="images (6).jfif" class="img-responsive" style="width:100%" alt="Image">
+      <img src="images (6).jfif" class="img-rounded" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
       <p>Culvinder age:29</p>
-      <img src="cb782bd9da27e7b6dcd7974d2bb3a42e.jpg"  class="img-responsive" style="width:100%" alt="Image">
+      <img src="cb782bd9da27e7b6dcd7974d2bb3a42e.jpg"  class="img-rounded" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3">
       <p>Davinder age:29</p>
-      <img src="19f5f323d43f922fafa6d771e18eeb95.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="19f5f323d43f922fafa6d771e18eeb95.jpg" class="img-rounded" style="width:100%" alt="Image">
     </div>
 
 
@@ -495,19 +495,19 @@ function closeForm() {
      <div class="row">
     <div class="col-sm-3">
       <p>Anaanya age:25</p>
-      <img src="screen-1.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="screen-1.jpg" class="img-rounded" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
       <p>Mahima age:27</p>
-      <img src="images (7).jfif" class="img-responsive" style="width:100%" alt="Image">
+      <img src="images (7).jfif" class="img-rounded" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
       <p>Ridhi age:30</p>
-      <img src="3.-Manushi-Chhillar.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="3.-Manushi-Chhillar.jpg" class="img-rounded" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3">
       <p>Poonam age:28</p>
-      <img src="6f57ba87b7285a4ac17488a939753122.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="6f57ba87b7285a4ac17488a939753122.jpg" class="img-rounded" style="width:100%" alt="Image">
     </div>
   </div>
       </div>
@@ -516,23 +516,23 @@ function closeForm() {
       <div class="row">
         <div class="col-sm-3">
           <div class="well">
-            <img src="images (3).jfif" class="img-responsive" style="width:100%" alt="Image">
+            <img src="images (3).jfif" class="img-rounded" style="width:100%" alt="Image">
           </div>
         </div>
         <div class="col-sm-3">
           <div class="well">
-             <img src="pexels-photo-2174662.jpeg" class="img-responsive" style="width:100%" alt="Image">
+             <img src="pexels-photo-2174662.jpeg" class="img-rounded" style="width:100%" alt="Image">
           </div>
         </div>
         <div class="col-sm-3">
           <div class="well">
-            <img src="portrait-happy-lovely-indian-couple-smiling-posing-camera-pleasend-signs-together-over-green-background-portrait-144540942.jpg" class="img-responsive" style="width:100%" alt="Image">
+            <img src="portrait-happy-lovely-indian-couple-smiling-posing-camera-pleasend-signs-together-over-green-background-portrait-144540942.jpg" class="img-rounded" style="width:100%" alt="Image">
           
           </div>
         </div>
         <div class="col-sm-3">
           <div class="well">
-           <img src="images (4).jfif" class="img-responsive" style="width:100%" alt="Image">
+           <img src="images (4).jfif" class="img-rounded" style="width:100%" alt="Image">
           </div>
         </div>
       </div>
@@ -541,19 +541,19 @@ function closeForm() {
         <div class="col-sm-4">
           <div class="well">
             <p>Jalandhar</p> 
-           <img src="images (8).jfif" class="img-responsive" style="width:100%" alt="Image">
+           <img src="images (8).jfif" class="img-rounded" style="width:100%" alt="Image">
           </div>
         </div>
         <div class="col-sm-4">
           <div class="well">
             <p>Jodhpur</p> 
-             <img src="6e3081b1250c7386fef22c4e6a88036e.jpg" class="img-responsive" style="width:100%" alt="Image">
+             <img src="6e3081b1250c7386fef22c4e6a88036e.jpg" class="img-rounded" style="width:100%" alt="Image">
           </div>
         </div>
         <div class="col-sm-4">
           <div class="well">
             <p>Shimla</p> 
-             <img src="fc172dc443d67f5bf691d28ee885874c.jpg" class="img-responsive" style="width:100%" alt="Image">
+             <img src="fc172dc443d67f5bf691d28ee885874c.jpg" class="img-rounded" style="width:100%" alt="Image">
           </div>
         </div>
       </div>
@@ -567,6 +567,7 @@ function closeForm() {
 
   <!-- Site footer -->
     <footer class="site-footer">
+
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-6">
